--- a/WhatToDo.Website/WhatToDo.Website.csproj
+++ b/WhatToDo.Website/WhatToDo.Website.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,6 +10,7 @@
 
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
+    <UserSecretsId>cc0e1455-d0a4-48a7-b225-46bc6d474e9c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
