--- a/WhatToDo.DataAccess/WhatToDo.DataAccess.csproj
+++ b/WhatToDo.DataAccess/WhatToDo.DataAccess.csproj
@@ -13,4 +13,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
