--- a/WhatToDo.Website/WhatToDo.Website.csproj
+++ b/WhatToDo.Website/WhatToDo.Website.csproj
@@ -31,7 +31,10 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\shared\models\address.model.ts" />
+    <None Remove="ClientApp\src\app\shared\models\category.model.ts" />
+    <None Remove="ClientApp\src\app\shared\models\image.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\place.model.ts" />
+    <None Remove="ClientApp\src\app\shared\models\url.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,7 +43,10 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\address.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\models\category.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\models\image.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\place.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\models\url.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
