--- a/WhatToDo.Website/WhatToDo.Website.csproj
+++ b/WhatToDo.Website/WhatToDo.Website.csproj
@@ -34,7 +34,7 @@
     <None Remove="ClientApp\src\app\shared\models\category.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\image.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\place.model.ts" />
-    <None Remove="ClientApp\src\app\shared\models\url.ts" />
+    <None Remove="ClientApp\src\app\shared\models\url.model.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,7 +46,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\category.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\image.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\place.model.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\shared\models\url.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\models\url.model.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
