--- a/WhatToDo.Website/WhatToDo.Website.csproj
+++ b/WhatToDo.Website/WhatToDo.Website.csproj
@@ -35,6 +35,7 @@
     <None Remove="ClientApp\src\app\shared\models\image.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\place.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\url.model.ts" />
+    <None Remove="ClientApp\src\app\shared\services\places.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -47,6 +48,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\image.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\place.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\url.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\services\places.service.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
