--- a/WhatToDo.Website/WhatToDo.Website.csproj
+++ b/WhatToDo.Website/WhatToDo.Website.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\shared\models\address.model.ts" />
+    <None Remove="ClientApp\src\app\shared\models\category-icon.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\category.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\image.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\place.model.ts" />
@@ -44,6 +45,7 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\address.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\models\category-icon.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\category.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\image.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\place.model.ts" />
