--- a/WhatToDo.Website/WhatToDo.Website.csproj
+++ b/WhatToDo.Website/WhatToDo.Website.csproj
@@ -34,6 +34,7 @@
     <None Remove="ClientApp\src\app\shared\models\category-icon.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\category.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\image.model.ts" />
+    <None Remove="ClientApp\src\app\shared\models\opening-hours.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\place.model.ts" />
     <None Remove="ClientApp\src\app\shared\models\url.model.ts" />
     <None Remove="ClientApp\src\app\shared\services\places.service.ts" />
@@ -48,6 +49,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\category-icon.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\category.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\image.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared\models\opening-hours.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\place.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\models\url.model.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\shared\services\places.service.ts" />
